# tinysplinecxx-test

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/scripts/linux/: build.sh  configure.sh
.github/workflows/: config.yml
